[gd_scene load_steps=5 format=3 uid="uid://dy6v1cfdcw0lk"]

[ext_resource type="LabelSettings" uid="uid://db1v5xdrewxnc" path="res://assets/lg_wenge_32.tres" id="1_bqbs3"]
[ext_resource type="Script" path="res://scenes/game_ui/game_ui.gd" id="1_nvhwp"]
[ext_resource type="LabelSettings" uid="uid://dlk1gjod4scxd" path="res://assets/lg_white_48.tres" id="2_6jaj6"]
[ext_resource type="LabelSettings" uid="uid://cqwnyvkv5gmxq" path="res://assets/lg_ecru_64.tres" id="3_jvh2w"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nvhwp")

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="LabelPickups" type="Label" parent="MC"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "10/10"
label_settings = ExtResource("1_bqbs3")

[node name="LabelExit" type="Label" parent="MC"]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Get to the exit!"
label_settings = ExtResource("2_6jaj6")

[node name="LabelTimer" type="Label" parent="MC"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "00:00:00"
label_settings = ExtResource("1_bqbs3")

[node name="GameOverRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.564706, 0.305882, 0.333333, 0.670588)

[node name="Label" type="Label" parent="GameOverRect"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
text = "Game Over!"
label_settings = ExtResource("3_jvh2w")
horizontal_alignment = 1
vertical_alignment = 1
